the webpage is written like shit

--- a/src/main/resources/static/SP-IMS.html
+++ b/src/main/resources/static/SP-IMS.html
@@ -84,12 +84,12 @@
                     <span>类别</span>
                     <select name="jiemu" id="" v-model="searchForm.category">
                         <option selected disabled>请选择</option>
-                        <option value=1>歌舞</option>
-                        <option value=2>戏曲</option>
-                        <option value=3>小品</option>
-                        <option value=4>相声</option>
-                        <option value=5>武术</option>
-                        <option value=6>其他</option>
+                        <option value="歌舞">歌舞</option>
+                        <option value="戏曲">戏曲</option>
+                        <option value="小品">小品</option>
+                        <option value="相声">相声</option>
+                        <option value="武术">武术</option>
+                        <option value="其他">其他</option>
                     </select>
                 </div>
                 <div class="onebox">
