--- a/src/main/resources/static/SP-IMS.html
+++ b/src/main/resources/static/SP-IMS.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>春晚节目单</title>
-    <link rel="stylesheet" href="./SP-IMS.css" type="text/css"/>
+    <link rel="stylesheet" href="./SP-IMS.css" type="text/css" />
     <!-- 引入样式 -->
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css" />
     <!-- 挂载vue -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
     <!-- 引入组件库 -->
@@ -19,132 +19,130 @@
 
 
 <body>
-<div id="app1">
-    <div class="content">
-        <h1>2023春节联欢晚会节目单</h1>
-        <button class="btn" @click="add">新增</button>
-        <el-dialog title="新增节目" :visible.sync="isAdd">
-            <el-form :model="addForm">
-                <el-form-item label="类别">
-                    <el-select v-model="addForm.category" placeholder="请选择">
-                        <el-option
-                                v-for="item in cateOptions"
-                                :key="item.value"
-                                :label="item.label"
+    <div id="app1">
+        <div class="content">
+            <h1>2023春节联欢晚会节目单</h1>
+            <button class="btn" @click="add">新增</button>
+
+            <el-dialog title="新增节目" :visible.sync="isAdd">
+                <el-form :model="addForm">
+                    <el-form-item label="类别">
+                        <el-select v-model="addForm.category" placeholder="请选择">
+                            <el-option v-for="item in cateOptions" :key="item.value" :label="item.label"
                                 :value="item.value">
-                        </el-option>
-                    </el-select>
-                </el-form-item>
-                <el-form-item label="节目名">
-                    <el-input v-model="addForm.program" placeholder="请输入内容"></el-input>
-                </el-form-item>
-                <el-form-item label="演员">
-                    <el-input v-model="addForm.actor" placeholder="请输入内容"></el-input>
-                </el-form-item>
-                <el-form-item label="看点">
-                    <el-input v-model="addForm.point" placeholder="请输入内容"></el-input>
-                </el-form-item>
-            </el-form>
-            <div slot="footer" class="dialog-footer">
-                <el-button @click="isAdd = false">取 消</el-button>
-                <el-button type="primary" @click="addConfirm">确 定</el-button>
-            </div>
-        </el-dialog>
-        <el-dialog title="编辑节目" :visible.sync="isEdit">
-            <el-form :model="editForm">
-                <el-form-item label="类别">
-                    <el-select v-model="editForm.category" placeholder="请选择">
-                        <el-option
-                                v-for="item in cateOptions"
-                                :key="item.value"
-                                :label="item.label"
+                            </el-option>
+                        </el-select>
+                    </el-form-item>
+                    <el-form-item label="节目名">
+                        <el-input v-model="addForm.program" placeholder="请输入内容"></el-input>
+                    </el-form-item>
+                    <el-form-item label="演员">
+                        <el-input v-model="addForm.actor" placeholder="请输入内容"></el-input>
+                    </el-form-item>
+                    <el-form-item label="看点">
+                        <el-input v-model="addForm.point" placeholder="请输入内容"></el-input>
+                    </el-form-item>
+                </el-form>
+                <div slot="footer" class="dialog-footer">
+                    <el-button @click="isAdd = false">取 消</el-button>
+                    <el-button type="primary" @click="addConfirm">确 定</el-button>
+                </div>
+            </el-dialog>
+
+            <el-dialog title="编辑节目" :visible.sync="isEdit">
+                <el-form :model="editForm">
+                    <el-form-item label="类别">
+                        <el-select v-model="editForm.category" placeholder="请选择">
+                            <el-option v-for="item in cateOptions" :key="item.value" :label="item.label"
                                 :value="item.value">
-                        </el-option>
-                    </el-select>
-                </el-form-item>
-                <el-form-item label="节目名">
-                    <el-input v-model="editForm.program" placeholder="请输入内容"></el-input>
-                </el-form-item>
-                <el-form-item label="演员">
-                    <el-input v-model="editForm.actor" placeholder="请输入内容"></el-input>
-                </el-form-item>
-                <el-form-item label="看点">
-                    <el-input v-model="editForm.point" placeholder="请输入内容"></el-input>
-                </el-form-item>
-            </el-form>
-            <div slot="footer" class="dialog-footer">
-                <el-button @click="isEdit = false">取 消</el-button>
-                <el-button type="primary" @click="editConfirm">确 定</el-button>
-            </div>
-        </el-dialog>
-        <div class="search-area">
-            <h2>查询条件</h2>
-            <div class="search-box">
-                <div class="onebox">
-                    <span>类别</span>
-                    <select name="jiemu" id="" v-model="searchForm.category">
-                        <option selected disabled>请选择</option>
-                        <option value="歌舞">歌舞</option>
-                        <option value="戏曲">戏曲</option>
-                        <option value="小品">小品</option>
-                        <option value="相声">相声</option>
-                        <option value="武术">武术</option>
-                        <option value="其他">其他</option>
-                    </select>
+                            </el-option>
+                        </el-select>
+                    </el-form-item>
+                    <el-form-item label="节目名">
+                        <el-input v-model="editForm.program" placeholder="请输入内容"></el-input>
+                    </el-form-item>
+                    <el-form-item label="演员">
+                        <el-input v-model="editForm.actor" placeholder="请输入内容"></el-input>
+                    </el-form-item>
+                    <el-form-item label="看点">
+                        <el-input v-model="editForm.point" placeholder="请输入内容"></el-input>
+                    </el-form-item>
+                </el-form>
+                <div slot="footer" class="dialog-footer">
+                    <el-button @click="isEdit = false">取 消</el-button>
+                    <el-button type="primary" @click="editConfirm">确 定</el-button>
                 </div>
-                <div class="onebox">
-                    <span>参演人数</span>
-                    <input type="radio" name="number" value=1 v-model="searchForm.actorNum"/> 1人
-                    <input type="radio" name="number" value=2 v-model="searchForm.actorNum"/> 2人
-                    <input type="radio" name="number" value=3 v-model="searchForm.actorNum"/> 3人及以上
+            </el-dialog>
+
+            <div class="search-area">
+                <h2>查询条件</h2>
+                <div class="search-box">
+                    <div class="onebox">
+                        <span>类别</span>
+                        <select name="jiemu" id="" v-model="searchForm.category">
+                            <option selected disabled>请选择</option>
+                            <option value="歌舞">歌舞</option>
+                            <option value="戏曲">戏曲</option>
+                            <option value="小品">小品</option>
+                            <option value="相声">相声</option>
+                            <option value="武术">武术</option>
+                            <option value="其他">其他</option>
+                        </select>
+                    </div>
+                    <div class="onebox">
+                        <span>参演人数</span>
+                        <input type="radio" name="number" value=1 v-model="searchForm.actorNum" /> 1人
+                        <input type="radio" name="number" value=2 v-model="searchForm.actorNum" /> 2人
+                        <input type="radio" name="number" value=3 v-model="searchForm.actorNum" /> 3人及以上
+                    </div>
+                    <div class="onebox">
+                        <span>节目名</span>
+                        <input type="text" class="name" name="jiemu-name" placeholder="请输入节目名"
+                            v-model="searchForm.program" />
+                    </div>
+                    <div class="onebox" id="rightbox">
+                        <input type="submit" class="btn" id="search" value="搜索" @click="search(searchForm)" />
+                    </div>
                 </div>
-                <div class="onebox">
-                    <span>节目名</span>
-                    <input type="text" class="name" name="jiemu-name" placeholder="请输入节目名"
-                           v-model="searchForm.program"/>
-                </div>
-                <div class="onebox" id="rightbox">
-                    <input type="submit" class="btn" id="search" value="搜索" @click="search(searchForm)"/>
-                </div>
-            </div>
-            <div class="result-area">
-                <h2>搜索结果</h2>
-                <div class="result-content">
+                <div class="result-area">
+                    <h2>搜索结果</h2>
+                    <div class="result-content">
 
-                    <template>
-                        <el-table :data="tableData" style="width: 100%">
-                            <el-table-column fixed="left" prop="id" type="index" label="id" width="50">
-                            </el-table-column>
-                            <el-table-column prop="typeName" label="类别" width="80">
-                            </el-table-column>
-                            <el-table-column prop="name" label="节目名" width="130">
-                            </el-table-column>
-                            <el-table-column prop="actorList" label="出演者" width="200">
-                                <li></li>
-                            </el-table-column>
-                            <el-table-column prop="view" label="看点" width="200">
-                            </el-table-column>
-                            <el-table-column fixed="right" label="操作" width="100">
-                                <template slot-scope="scope">
-                                    <el-button type="text" size="small" @click="deleteData(scope.row.id)">删除</el-button>
-                                    <el-button type="text" size="small" @click="edit(scope.row)">编辑</el-button>
-                                </template>
-                            </el-table-column>
-                        </el-table>
+                        <template>
+                            <el-table :data="tableData" style="width: 100%">
+                                <el-table-column fixed="left" prop="id" type="index" label="id" width="50">
+                                </el-table-column>
+                                <el-table-column prop="typeName" label="类别" width="80">
+                                </el-table-column>
+                                <el-table-column prop="name" label="节目名" width="130">
+                                </el-table-column>
+                                <el-table-column prop="actorList" label="出演者" width="200">
+                                    <li></li>
+                                </el-table-column>
+                                <el-table-column prop="view" label="看点" width="200">
+                                </el-table-column>
+                                <el-table-column fixed="right" label="操作" width="100">
+                                    <template slot-scope="scope">
+                                        <el-button type="text" size="small"
+                                            @click="deleteData(scope.row.id)">删除</el-button>
+                                        <el-button type="text" size="small" @click="edit(scope.row)">编辑</el-button>
+                                    </template>
+                                </el-table-column>
+                            </el-table>
 
-                        <el-pagination background layout="prev, pager, next" :total="40" @prev-click="pageChange"
-                                       @next-click="pageChange" @current-change="pageChange">
-                        </el-pagination>
+                            <el-pagination background layout="prev, pager, next" :total="40" @prev-click="pageChange"
+                                @next-click="pageChange" @current-change="pageChange">
+                            </el-pagination>
 
-                    </template>
+                        </template>
 
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-
 </body>
+
 <script src="./SP-IMS.js"></script>
 
 </html>
