--- a/src/main/resources/static/SP-IMS.html
+++ b/src/main/resources/static/SP-IMS.html
@@ -110,7 +110,7 @@
 
                         <template>
                             <el-table :data="tableData" style="width: 100%">
-                                <el-table-column fixed="left" prop="id" type="index" label="id" width="50">
+                                <el-table-column fixed="left" prop="id" label="id" width="50">
                                 </el-table-column>
                                 <el-table-column prop="typeName" label="类别" width="80">
                                 </el-table-column>
