--- a/src/main/resources/static/SP-IMS.html
+++ b/src/main/resources/static/SP-IMS.html
@@ -91,9 +91,9 @@
                     </div>
                     <div class="onebox">
                         <span>参演人数</span>
-                        <input type="radio" name="number" value=1 v-model="searchForm.actorNum" /> 1人
-                        <input type="radio" name="number" value=2 v-model="searchForm.actorNum" /> 2人
-                        <input type="radio" name="number" value=3 v-model="searchForm.actorNum" /> 3人及以上
+                        <input type="radio" name="number" value=1 v-model="searchForm.actorCount" /> 1人
+                        <input type="radio" name="number" value=2 v-model="searchForm.actorCount" /> 2人
+                        <input type="radio" name="number" value=3 v-model="searchForm.actorCount" /> 3人及以上
                     </div>
                     <div class="onebox">
                         <span>节目名</span>
